If there is a swipe event, cancel the li click so that we don't get the initial note info and then the edit screen.

--- a/stylesheets/mobilenotes.css
+++ b/stylesheets/mobilenotes.css
@@ -23,3 +23,7 @@ input.empty, textarea.empty {
 [data-role=page] {
     bottom: 0;
 }
+
+.ui-li .ui-btn-inner {
+    padding: 1.5em 75px 1.5em 15px;
+}
